--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Fri Oct  8 06:52:09 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesequencer.cc:
+	* gslloader-aiff.c:
+	* bseenginemaster.c: use g_static_assert().
+
 Mon Oct  4 03:46:52 2004  Tim Janik  <timj@gtk.org>
 
 	* bsestorage.c: fixed version string parsing.
