include bse/bsemath.h instead of math.h and use BSE_LN2.
Fri Oct  8 11:25:30 2004  Tim Janik  <timj@gtk.org>

        * artscompressor.cc: include bse/bsemath.h instead of math.h
        and use BSE_LN2.

        * bseiirfilter.c (bse_iir_filter_update_modules): disabled
        debugging printout.

Fri Oct  8 11:38:07 2004  Tim Janik  <timj@gtk.org>

        * bsedefs.h: don't include <math.h>. files needing math functions
        should include <bse/bsemath.h> instead.

        * bsemath.[hc]: removed BSE_EPSILON_CMP().
        moved contents from gslmath.h and gslmath.c here and changed namespace
        to bse. adapted users.

        * bseieee754.h: changed namespace to bse, adapted users.
        use signbit() if available.

        * bsemathsignal.[hc]: changed namespace to bse, adapted users.

        * gslmath.h, gslmath.c, gslsignal.h, gslsignal.c, gslieee754.h: removed.

        * gsl-fftconf.sh: include bsemath.h in generated source.

        * tests/mathtests.c: disabled ellipsis and complex root finding tests.

svn path=/trunk/; revision=2713

--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,11 @@
+Fri Oct  8 11:25:30 2004  Tim Janik  <timj@gtk.org>
+
+	* artscompressor.cc: include bse/bsemath.h instead of math.h
+	and use BSE_LN2.
+
+	* bseiirfilter.c (bse_iir_filter_update_modules): disabled
+	debugging printout.
+
 Mon Sep 20 15:54:10 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* artscompressor.cc: Keep output_db property fixed when auto_output is
