--- a/docs/site-links-related.texi
+++ b/docs/site-links-related.texi
@@ -23,6 +23,7 @@
 @item @uref{http://www.gnu.org/software/texinfo/,, Texinfo - BEAST and BSE documentation format}
 @item @uref{http://www.gtk.org,, GTK+ - The GIMP Toolkit}
 @item @uref{http://www.gnome.org,, GNOME Project}
+@item @uref{http://www.freedesktop.org/,, freedesktop.org}
 @item @uref{http://www.gnu.org,, GNU - GNU's Not Unix!}
 @end itemize
 
