--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -86,7 +86,7 @@ Building from CVS requires additional tools than building the
 release tarballs. The reason for this is due to building documentation
 and auto-generating code that are included in releases. In particular,
 building @beast from CVS now requires the texitheque module hosted in
-@uref{http://www.freedesktop.org/,, freedesktop.org} CVS. Anonymous
+@uref{http://cvs.freedesktop.org/,, freedesktop.org CVS}. Anonymous
 CVS access to freedesktop.org is described on their
 @uref{http://www.freedesktop.org/Main/GettingInvolved,, getting involved}
 page, however to just get texitheque, you do:
@@ -97,8 +97,11 @@ $ cvs login # there is no password, just hit return
 $ cvs -z3 checkout texitheque
 @end lisp
 
+Unlike release tarballs, the CVS version of @beast has to be build
+in place, because enabling srcdir!=builddir setups for the CVS version would
+unnecessarily complicate the already non-trivial documentation and code
+generation rules.
 Beware though, CVS versions may behave way less stable than release tarballs,
-and on occasions may produce invalid @file{.bse} files.
-
+and on occasions may produce invalid or incompatible @file{.bse} files.
 
 @bye
