--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-08  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 Thu Oct  7 01:38:32 2004  Tim Janik  <timj@gtk.org>
 
 	* it.po: applied translation updates from Petrecca Michele.
