--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Oct 12 09:54:37 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/generated/scandocs.pl: fixed comment reading by using the
+        comment parsing logic from glib-mkenums.pl.
+        fixed function declaration reader getting confused by certain
+        comments. added markup around URLs.
+
 Fri Oct  8 18:34:51 2004  Tim Janik  <timj@gtk.org>
 
 	* bsttracksynthdialog.[hc]: added candidate and wave repo label and
