--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@ Wed Oct 13 18:57:17 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/audio/Makefile.am:
 	* tests/audio/featuretest.sh: Get rid of seperate .test files by
-	moving the information which tests need to be performed with which
-	parameters into the Makefile.
+	moving the information which tests need to be performed into the
+	Makefile.
 
 	* tests/audio/bseadder.test.reference:
 	* tests/audio/bseadder.test: Removed, obsoled.
