--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Oct 13 21:28:37 2004  Tim Janik  <timj@gtk.org>
+
+	* bseserver.c (bse_server_close_devices): wait until pcm module is 
+	discarded before destroying teh pcm writer.
+
 Tue Oct 12 10:51:55 2004  Tim Janik  <timj@gtk.org>
 
 	* gsl-fftgen.pl: 
