--- a/TODO
+++ b/TODO
@@ -11,6 +11,8 @@ FIXMES:	(release-critical)
 - auto-add orphan parts to a new track when loading
 - move and add compat for Dav::*Name -> Bse::Dav::*Name
 - queue discard on active module and dismiss transaction. will the module be freed (although the job was not processed)?
+- BUG: premature aborts accour while playing long files in the sample editor 
+- binary names: beast-0.6.3-rc1 and bsesh-0.6.3
 TODO:
 - add -n <nicelevel> and -N for not nicing to beast and bsesh launchers
 - add executable versioning to sfidl 
