--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Oct 15 00:55:08 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/audio/Makefile.am: cleanups.
+
+	* tests/audio/featuretest.sh: 
+	s/featuretest.status.sh/featuretest.status.sh/ according to a comment
+	from stefan.
+
 Wed Oct 13 19:46:34 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/latency/bseplay.scm: added BSE file play script missing
