--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Oct 15 11:21:38 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/audio/Makefile.am: Added $(srcdir) to beastconf.sh. Execute
+	featuretest.sh from $(srcdir).
+
+	* tests/audio/featuretest.sh: Take .reference, .scm and .bse files
+	from $(srcdir), so building with srcdir != builddir should work fine
+	now.
+
 Fri Oct 15 03:53:47 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstplayback.[hc]: create a second wave oscillator to handle
