--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Fri Oct 15 11:53:40 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/audio/balance.bse:
+	* tests/audio/Makefile.am: Added balance test (for a step-by-step
+	description how to add your own test, see README). This test is a bit
+	special, as we verify both channels. So it has one target for the left
+	channel, and one target for the right channel.
+
+	* tests/audio/balance-left.reference:
+	* tests/audio/balance-right.reference: Test reference data.
+
 Fri Oct 15 11:51:29 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/audio/README: Updated README with a change necessary for
