Implemented seperate --cut-zeros-head and --cut-zeros-tail options.
Fri Oct 15 16:21:04 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Implemented seperate --cut-zeros-head and
	--cut-zeros-tail options. Silence cutting looks whether the signal is
	silent on all channels now, rather than just taking into account the
	channel selected by the --channel option.

	* tests/audio/balance-right.reference: Adapted to new silence cutting
	algorithm.

svn path=/trunk/; revision=2758

--- a/TODO
+++ b/TODO
@@ -185,8 +185,7 @@ DOCS:
   table etc. calculations
 
 FEATURE-EXTRACT/-COMPARE:
-- silence cut should examine all channels
-
+- base frequency feature
 
 MONITORING DIALOG:
 * Frame "Thread Info"
