--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Fri Oct 15 16:21:04 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tools/bsefextract.cc: Implemented seperate --cut-zeros-head and
+	--cut-zeros-tail options. Silence cutting looks whether the signal is
+	silent on all channels now, rather than just taking into account the
+	channel selected by the --channel option.
+
+	* tests/audio/balance-right.reference: Adapted to new silence cutting
+	algorithm.
+
 Fri Oct 15 16:01:42 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/audio/Makefile.am: perform time-sensitive spectrum tests for
