--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 16 00:41:08 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* configure.in: For development builds, xmllint is required. Fail if
+	its not found during configure.
+
 Fri Oct 15 17:20:30 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tools/bsefextract.cc: Added --compact option.
