synthesis link updates
svn path=/trunk/; revision=2766

--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -99,12 +99,17 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/dec03/articles/synthsecrets.htm,,Part56}
 @item Synth Secrets 2004:
 	@uref{http://www.soundonsound.com/sos/jan04/articles/synthsecrets.htm,,Part57}
-	@c @uref{http://www.soundonsound.com/sos/feb04/articles/synthsecrets.htm,,Part58}
-	@c @uref{http://www.soundonsound.com/sos/mar04/articles/synthsecrets.htm,,Part59}
+	@uref{http://www.soundonsound.com/sos/feb04/articles/synthsecrets.htm,,Part58}
+	@uref{http://www.soundonsound.com/sos/mar04/articles/synthsecrets.htm,,Part59}
 	@c @uref{http://www.soundonsound.com/sos/apr04/articles/synthsecrets.htm,,Part60}
 	@c @uref{http://www.soundonsound.com/sos/may04/articles/synthsecrets.htm,,Part61}
 	@c @uref{http://www.soundonsound.com/sos/jun04/articles/synthsecrets.htm,,Part62}
 	@c @uref{http://www.soundonsound.com/sos/jul04/articles/synthsecrets.htm,,Part63}
+	@c @uref{http://www.soundonsound.com/sos/aug04/articles/synthsecrets.htm,,Part64}
+	@c @uref{http://www.soundonsound.com/sos/sep04/articles/synthsecrets.htm,,Part65}
+	@c @uref{http://www.soundonsound.com/sos/oct04/articles/synthsecrets.htm,,Part66}
+	@c @uref{http://www.soundonsound.com/sos/nov04/articles/synthsecrets.htm,,Part67}
+	@c @uref{http://www.soundonsound.com/sos/dec04/articles/synthsecrets.htm,,Part68}
 @end itemize
 
 
